3rd party party!

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Vrigz's Hexoblog">
 <meta property="og:url" content="http://www.brigidoantazoalejo.space/hexoblog/index.html">
+<meta property="og:image" content="http://cdn.rawgit.com/vrigzalejo/vrigzalejo.github.io/master/images/vrigz-color1.jpg">
 <meta property="og:site_name" content="Vrigz's Hexoblog">
 <meta property="og:description">
 <meta name="twitter:card" content="summary">
